@@ -1,3 +1,8 @@
+2002-11-20  Daniel Jacobowitz  <drow@mvista.com>
+
+	* linux-s390-low.c (s390_regmap): Check GPR_SIZE instead of
+	defined(PT_FPR0_HI).
+
 2002-11-17  Stuart Hughes  <seh@zee2.com>
 
 	* linux-arm-low.c (arm_num_regs): Increase.
